5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1716_2502.log
== SUBMITION (2019-05-16 15:11:08) 
-- CODE:
from math import *
n = int(input())
calculo = 0
v = 0
a = 0
sinal = 1
while(v<n):
	denominador = ((2*v)+1)*(3**a)
	x = 12**(1/2) * (sinal*1)/denominador
	calculo = calculo + x
	v = v+ 1
	sinal = sinal * (-1)
	a = a + 1
print(round(calculo,8)
-- EXECUTION TIME:
0.134543
-- ERROR:
  File "/home/codebench/codes/1716/2502/main.py", line 15
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:11:12) 
-- CODE:
from math import *
n = int(input())
calculo = 0
v = 0
a = 0
sinal = 1
while(v<n):
	denominador = ((2*v)+1)*(3**a)
	x = 12**(1/2) * (sinal*1)/denominador
	calculo = calculo + x
	v = v+ 1
	sinal = sinal * (-1)
	a = a + 1
print(round(calculo,8))
-- EXECUTION TIME:
0.138062
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
